src/proyecto1/ProyectoParcial1.java
package proyecto1;

/* ProyectoParcial1.java */
 /* Generated By:JavaCC: Do not edit this line. ProyectoParcial1.java */
import java.util.ArrayList;
import syntaxtree.*;
import java.util.Vector;

public class ProyectoParcial1 implements ProyectoParcial1Constants {

    ArrayList<Token> lista;
    ArrayList<Simbolo> tabla;
    Simbolo sim;

    final public Programa Programa() throws ParseException {
        NodeList n0 = new NodeList();
        Sentencia n1;
        label_1:
        while (true) {
            n1 = Sentencia();
            n0.addNode(n1);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case ENTERO:
                case FLOTANTE:
                case STRING:
                case LECTURA:
                case IMPRIMIR:
                case IF:
                case FOR:
                case WHILE:
                case VARIABLE: {
                    ;
                    break;
                }
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
        }
        n0.nodes.trimToSize();
        {
            if ("" != null) {
                return new Programa(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Sentencia Sentencia() throws ParseException {
        NodeChoice n0;
        NodeSequence n1;
        DeclararVariable n2;
        NodeToken n3;
        Token n4;
        NodeSequence n5;
        SentenciaLeer n6;
        NodeToken n7;
        Token n8;
        NodeSequence n9;
        SentenciaImprimir n10;
        NodeToken n11;
        Token n12;
        NodeSequence n13;
        AsignarValor n14;
        NodeToken n15;
        Token n16;
        SentenciaIf n17;
        SentenciaFor n18;
        SentenciaWhile n19;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case ENTERO:
            case FLOTANTE:
            case STRING: {
                n1 = new NodeSequence(2);
                n2 = DeclararVariable();
                n1.addNode(n2);
                n4 = jj_consume_token(PUNTO_COMA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n1.addNode(n3);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case LECTURA: {
                n5 = new NodeSequence(2);
                n6 = SentenciaLeer();
                n5.addNode(n6);
                n8 = jj_consume_token(PUNTO_COMA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n7 = JTBToolkit.makeNodeToken(n8);
                n5.addNode(n7);
                n0 = new NodeChoice(n5, 1);
                break;
            }
            case IMPRIMIR: {
                n9 = new NodeSequence(2);
                n10 = SentenciaImprimir();
                n9.addNode(n10);
                n12 = jj_consume_token(PUNTO_COMA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n11 = JTBToolkit.makeNodeToken(n12);
                n9.addNode(n11);
                n0 = new NodeChoice(n9, 2);
                break;
            }
            case VARIABLE: {
                n13 = new NodeSequence(2);
                n14 = AsignarValor();
                n13.addNode(n14);
                n16 = jj_consume_token(PUNTO_COMA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n15 = JTBToolkit.makeNodeToken(n16);
                n13.addNode(n15);
                n0 = new NodeChoice(n13, 3);
                break;
            }
            case IF: {
                n17 = SentenciaIf();
                n0 = new NodeChoice(n17, 4);
                break;
            }
            case FOR: {
                n18 = SentenciaFor();
                n0 = new NodeChoice(n18, 5);
                break;
            }
            case WHILE: {
                n19 = SentenciaWhile();
                n0 = new NodeChoice(n19, 6);
                break;
            }
            default:
                jj_la1[1] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new Sentencia(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public DeclararVariable DeclararVariable() throws ParseException {
        TipoDato n0;
        NodeToken n1;
        Token n2;
        n0 = TipoDato();
        n2 = jj_consume_token(VARIABLE);
        System.out.println("Token:" + token.toString());
        
        
        if (lista != null) {
            lista.add(token);
            sim.nombre=token.toString();
            if(tabla.contains(sim)){
                throw new ArithmeticException(" Variable "+
                        sim.nombre+" ya declarada,Linea "+token.beginLine);
            }
            else{
                tabla.add(sim);
            }
        }
        
        
        n1 = JTBToolkit.makeNodeToken(n2);
        {
            if ("" != null) {
                return new DeclararVariable(n0, n1);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public TipoDato TipoDato() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        NodeToken n5;
        Token n6;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case ENTERO: {
                n2 = jj_consume_token(ENTERO);
                System.out.println("Token:" + token.toString());
                
                
                if (lista != null) {
                    lista.add(token);
                    sim=new Simbolo();
                    sim.tipo=token.toString();
                }
                
                
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case FLOTANTE: {
                n4 = jj_consume_token(FLOTANTE);
                System.out.println("Token:" + token.toString());
                
                
                if (lista != null) {
                    lista.add(token);
                    sim=new Simbolo();
                    sim.tipo=token.toString();
                }
                
                
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            case STRING: {
                n6 = jj_consume_token(STRING);
                System.out.println("Token:" + token.toString());
                
                
                if (lista != null) {
                    lista.add(token);
                    sim=new Simbolo();
                    sim.tipo=token.toString();
                }
                
                
                n5 = JTBToolkit.makeNodeToken(n6);
                n0 = new NodeChoice(n5, 2);
                break;
            }
            default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new TipoDato(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public SentenciaLeer SentenciaLeer() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeToken n2;
        Token n3;
        NodeToken n4;
        Token n5;
        NodeToken n6;
        Token n7;
        n1 = jj_consume_token(LECTURA);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(PAR_IZQ);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n2 = JTBToolkit.makeNodeToken(n3);
        n5 = jj_consume_token(VARIABLE);
        System.out.println("Token:" + token.toString());
        
        
        //Verificar si ID esta en la tabla de simbolos
        Simbolo t=new Simbolo();
        t.nombre=token.toString();
        if(!tabla.contains(t)){
            throw new ArithmeticException(" READLN,variable "
                    +t.nombre+" no declarada,Linea"+token.beginLine);
        }
        
        
        if (lista != null) {
            lista.add(token);
        }
        n4 = JTBToolkit.makeNodeToken(n5);
        n7 = jj_consume_token(PAR_DER);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n6 = JTBToolkit.makeNodeToken(n7);
        {
            if ("" != null) {
                return new SentenciaLeer(n0, n2, n4, n6);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public SentenciaImprimir SentenciaImprimir() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeToken n2;
        Token n3;
        Expresion n4;
        NodeToken n5;
        Token n6;
        n1 = jj_consume_token(IMPRIMIR);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(PAR_IZQ);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n2 = JTBToolkit.makeNodeToken(n3);
        n4 = Expresion();
        n6 = jj_consume_token(PAR_DER);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n5 = JTBToolkit.makeNodeToken(n6);
        {
            if ("" != null) {
                return new SentenciaImprimir(n0, n2, n4, n5);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public AsignarValor AsignarValor() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeToken n2;
        Token n3;
        Expresion n4;
        n1 = jj_consume_token(VARIABLE);
        
        
        //Verificar si ID esta en la tabla de simbolos
        Simbolo t=new Simbolo();
        t.nombre=token.toString();
        if(!tabla.contains(t)){
            throw new ArithmeticException(" ASIGNARVALOR,variable "
                    +t.nombre+" no declarada,Linea"+token.beginLine);
        }
        
        
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(ASIGNACION);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n2 = JTBToolkit.makeNodeToken(n3);
        n4 = Expresion();
        {
            if ("" != null) {
                return new AsignarValor(n0, n2, n4);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Expresion Expresion() throws ParseException {
        ExpresionSimple n0;
        NodeOptional n1 = new NodeOptional();
        NodeSequence n2;
        OperadorComparacion n3;
        ExpresionSimple n4;
        n0 = ExpresionSimple();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case COMPARACION:
            case MENOR_QUE:
            case MAYOR_QUE:
            case MENOR_IGUAL:
            case MAYOR_IGUAL: {
                n2 = new NodeSequence(2);
                n3 = OperadorComparacion();
                n2.addNode(n3);
                n4 = ExpresionSimple();
                n2.addNode(n4);
                n1.addNode(n2);
                break;
            }
            default:
                jj_la1[3] = jj_gen;
                ;
        }
        {
            if ("" != null) {
                return new Expresion(n0, n1);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OperadorComparacion OperadorComparacion() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        NodeToken n5;
        Token n6;
        NodeToken n7;
        Token n8;
        NodeToken n9;
        Token n10;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case COMPARACION: {
                n2 = jj_consume_token(COMPARACION);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case MENOR_QUE: {
                n4 = jj_consume_token(MENOR_QUE);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            case MAYOR_QUE: {
                n6 = jj_consume_token(MAYOR_QUE);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n5 = JTBToolkit.makeNodeToken(n6);
                n0 = new NodeChoice(n5, 2);
                break;
            }
            case MENOR_IGUAL: {
                n8 = jj_consume_token(MENOR_IGUAL);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n7 = JTBToolkit.makeNodeToken(n8);
                n0 = new NodeChoice(n7, 3);
                break;
            }
            case MAYOR_IGUAL: {
                n10 = jj_consume_token(MAYOR_IGUAL);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n9 = JTBToolkit.makeNodeToken(n10);
                n0 = new NodeChoice(n9, 4);
                break;
            }
            default:
                jj_la1[4] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new OperadorComparacion(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public ExpresionSimple ExpresionSimple() throws ParseException {
        Termino n0;
        NodeListOptional n1 = new NodeListOptional();
        NodeSequence n2;
        OperadorTermino n3;
        Termino n4;
        n0 = Termino();
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case SUMA:
                case RESTA: {
                    ;
                    break;
                }
                default:
                    jj_la1[5] = jj_gen;
                    break label_2;
            }
            n2 = new NodeSequence(2);
            n3 = OperadorTermino();
            n2.addNode(n3);
            n4 = Termino();
            n2.addNode(n4);
            n1.addNode(n2);
        }
        n1.nodes.trimToSize();
        {
            if ("" != null) {
                return new ExpresionSimple(n0, n1);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OperadorTermino OperadorTermino() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case SUMA: {
                n2 = jj_consume_token(SUMA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case RESTA: {
                n4 = jj_consume_token(RESTA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            default:
                jj_la1[6] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new OperadorTermino(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Termino Termino() throws ParseException {
        Factor n0;
        NodeListOptional n1 = new NodeListOptional();
        NodeSequence n2;
        OperadorFactor n3;
        Factor n4;
        n0 = Factor();
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case MULTIPLICACION:
                case DIVISION:
                case MODULO: {
                    ;
                    break;
                }
                default:
                    jj_la1[7] = jj_gen;
                    break label_3;
            }
            n2 = new NodeSequence(2);
            n3 = OperadorFactor();
            n2.addNode(n3);
            n4 = Factor();
            n2.addNode(n4);
            n1.addNode(n2);
        }
        n1.nodes.trimToSize();
        {
            if ("" != null) {
                return new Termino(n0, n1);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OperadorFactor OperadorFactor() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        NodeToken n5;
        Token n6;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case MULTIPLICACION: {
                n2 = jj_consume_token(MULTIPLICACION);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case DIVISION: {
                n4 = jj_consume_token(DIVISION);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            case MODULO: {
                n6 = jj_consume_token(MODULO);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n5 = JTBToolkit.makeNodeToken(n6);
                n0 = new NodeChoice(n5, 2);
                break;
            }
            default:
                jj_la1[8] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new OperadorFactor(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Factor Factor() throws ParseException {
        Complejo n0;
        NodeListOptional n1 = new NodeListOptional();
        NodeSequence n2;
        OperadorComplejo n3;
        Complejo n4;
        n0 = Complejo();
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case POTENCIA:
                case RAIZ_CUADRADA: {
                    ;
                    break;
                }
                default:
                    jj_la1[9] = jj_gen;
                    break label_4;
            }
            n2 = new NodeSequence(2);
            n3 = OperadorComplejo();
            n2.addNode(n3);
            n4 = Complejo();
            n2.addNode(n4);
            n1.addNode(n2);
        }
        n1.nodes.trimToSize();
        {
            if ("" != null) {
                return new Factor(n0, n1);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OperadorComplejo OperadorComplejo() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case POTENCIA: {
                n2 = jj_consume_token(POTENCIA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case RAIZ_CUADRADA: {
                n4 = jj_consume_token(RAIZ_CUADRADA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            default:
                jj_la1[10] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new OperadorComplejo(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Complejo Complejo() throws ParseException {
        NodeChoice n0;
        NodeSequence n1;
        NodeToken n2;
        Token n3;
        Expresion n4;
        NodeToken n5;
        Token n6;
        Valor n7;
        NodeToken n8;
        Token n9;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case PAR_IZQ: {
                n1 = new NodeSequence(3);
                n3 = jj_consume_token(PAR_IZQ);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n2 = JTBToolkit.makeNodeToken(n3);
                n1.addNode(n2);
                n4 = Expresion();
                n1.addNode(n4);
                n6 = jj_consume_token(PAR_DER);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n5 = JTBToolkit.makeNodeToken(n6);
                n1.addNode(n5);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case NUM_ENTERO:
            case NUM_FLOTANTE:
            case CADENA: {
                n7 = Valor();
                n0 = new NodeChoice(n7, 1);
                break;
            }
            case VARIABLE: {
                n9 = jj_consume_token(VARIABLE);
                System.out.println("Token:" + token.toString());
                
                
                //Verificar si ID esta en la tabla de simbolos
                Simbolo t=new Simbolo();
                t.nombre=token.toString();
                if(!tabla.contains(t)){
                    throw new ArithmeticException(" COMPLEJO,variable "
                        +t.nombre+" no declarada,Linea"+token.beginLine);
        }
                
                
                if (lista != null) {
                    lista.add(token);
                }
                n8 = JTBToolkit.makeNodeToken(n9);
                n0 = new NodeChoice(n8, 2);
                break;
            }
            default:
                jj_la1[11] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new Complejo(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Valor Valor() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        NodeToken n5;
        Token n6;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case NUM_ENTERO: {
                n2 = jj_consume_token(NUM_ENTERO);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case NUM_FLOTANTE: {
                n4 = jj_consume_token(NUM_FLOTANTE);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            case CADENA: {
                n6 = jj_consume_token(CADENA);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n5 = JTBToolkit.makeNodeToken(n6);
                n0 = new NodeChoice(n5, 2);
                break;
            }
            default:
                jj_la1[12] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new Valor(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OperadorLogico OperadorLogico() throws ParseException {
        NodeChoice n0;
        NodeToken n1;
        Token n2;
        NodeToken n3;
        Token n4;
        NodeToken n5;
        Token n6;
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case AND: {
                n2 = jj_consume_token(AND);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n1 = JTBToolkit.makeNodeToken(n2);
                n0 = new NodeChoice(n1, 0);
                break;
            }
            case OR: {
                n4 = jj_consume_token(OR);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n3 = JTBToolkit.makeNodeToken(n4);
                n0 = new NodeChoice(n3, 1);
                break;
            }
            case NOT: {
                n6 = jj_consume_token(NOT);
                System.out.println("Token:" + token.toString());
                if (lista != null) {
                    lista.add(token);
                }
                n5 = JTBToolkit.makeNodeToken(n6);
                n0 = new NodeChoice(n5, 2);
                break;
            }
            default:
                jj_la1[13] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if ("" != null) {
                return new OperadorLogico(n0);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public SentenciaIf SentenciaIf() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeToken n2;
        Token n3;
        ExpresionCondicional n4;
        NodeToken n5;
        Token n6;
        NodeToken n7;
        Token n8;
        NodeList n9 = new NodeList();
        Sentencia n10;
        NodeToken n11;
        Token n12;
        NodeOptional n13 = new NodeOptional();
        ExpresionElse n14;
        n1 = jj_consume_token(IF);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(PAR_IZQ);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n2 = JTBToolkit.makeNodeToken(n3);
        n4 = ExpresionCondicional();
        n6 = jj_consume_token(PAR_DER);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n5 = JTBToolkit.makeNodeToken(n6);
        n8 = jj_consume_token(CUR_IZQ);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n7 = JTBToolkit.makeNodeToken(n8);
        label_5:
        while (true) {
            n10 = Sentencia();
            n9.addNode(n10);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case ENTERO:
                case FLOTANTE:
                case STRING:
                case LECTURA:
                case IMPRIMIR:
                case IF:
                case FOR:
                case WHILE:
                case VARIABLE: {
                    ;
                    break;
                }
                default:
                    jj_la1[14] = jj_gen;
                    break label_5;
            }
        }
        n9.nodes.trimToSize();
        n12 = jj_consume_token(CUR_DER);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n11 = JTBToolkit.makeNodeToken(n12);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case ELSE: {
                n14 = ExpresionElse();
                n13.addNode(n14);
                break;
            }
            default:
                jj_la1[15] = jj_gen;
                ;
        }
        {
            if ("" != null) {
                return new SentenciaIf(n0, n2, n4, n5, n7, n9, n11, n13);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public ExpresionElse ExpresionElse() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeToken n2;
        Token n3;
        NodeList n4 = new NodeList();
        Sentencia n5;
        NodeToken n6;
        Token n7;
        n1 = jj_consume_token(ELSE);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(CUR_IZQ);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n2 = JTBToolkit.makeNodeToken(n3);
        label_6:
        while (true) {
            n5 = Sentencia();
            n4.addNode(n5);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case ENTERO:
                case FLOTANTE:
                case STRING:
                case LECTURA:
                case IMPRIMIR:
                case IF:
                case FOR:
                case WHILE:
                case VARIABLE: {
                    ;
                    break;
                }
                default:
                    jj_la1[16] = jj_gen;
                    break label_6;
            }
        }
        n4.nodes.trimToSize();
        n7 = jj_consume_token(CUR_DER);
        System.out.println("Token:" + token.toString());
        if (lista != null) {
            lista.add(token);
        }
        n6 = JTBToolkit.makeNodeToken(n7);
        {
            if ("" != null) {
                return new ExpresionElse(n0, n2, n4, n6);
            }
        }
        throw new Error("Missing return statement in function");
    }
